--- a/src/main/resources/application-sit.properties
+++ b/src/main/resources/application-sit.properties
@@ -1,2 +1,12 @@
 spring.application.name=hrms
 server.port=8083
+
+spring.datasource.url=jdbc:mysql://localhost:3306/testradical?useSSL=false
+spring.datasource.username=root
+spring.datasource.password=Welcome@129#2022
+# create, create-drop, update, none
+spring.jpa.show-sql=true
+spring.jpa.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.hibernate.ddl-auto=update
