--- a/src/main/resources/application-sit.properties
+++ b/src/main/resources/application-sit.properties
@@ -6,7 +6,7 @@ spring.datasource.username=root
 spring.datasource.password=Welcome@129#2022
 # create, create-drop, update, none
 spring.jpa.show-sql=true
-spring.jpa.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
